[gd_scene load_steps=14 format=2]

[ext_resource path="res://object scene/game/Platform.tscn" type="PackedScene" id=1]
[ext_resource path="res://object scene/game/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/main_game.gd" type="Script" id=3]
[ext_resource path="res://scripts/api_connect.gd" type="Script" id=4]
[ext_resource path="res://assets/font/FredokaOne-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/DG_GO.png" type="Texture" id=6]
[ext_resource path="res://assets/BG_GO.png" type="Texture" id=7]

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, -2.49381, -1.35289, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 717.746, 2.29124 )
}

[sub_resource type="DynamicFont" id=2]
size = 35
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="StyleBoxTexture" id=4]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 1000, 1000 )

[sub_resource type="DynamicFont" id=5]
size = 70
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 70
font_data = ExtResource( 5 )

[node name="[R] Game" type="Node"]
script = ExtResource( 3 )

[node name="HTTPRequest" type="HTTPRequest" parent="."]
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 720.0
margin_bottom = 1280.0
color = Color( 0.0941176, 0.619608, 0.584314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Platform" parent="." instance=ExtResource( 1 )]
position = Vector2( 355.513, 904.972 )
collision_mask = 0

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 360, 800 )

[node name="Path2D" type="Path2D" parent="."]
position = Vector2( 100, 0 )
scale = Vector2( 0.7, 1 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Path2D"]
position = Vector2( -2.49381, -1.35289 )
rotation = 0.298007

[node name="HUD" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreContainer" type="VBoxContainer" parent="HUD"]
margin_top = 20.0
margin_right = 180.0
margin_bottom = 160.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreSign" type="Label" parent="HUD/ScoreContainer"]
margin_right = 180.0
margin_bottom = 50.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 2 )
text = "SCORE"
align = 1
valign = 2
uppercase = true

[node name="ScoreValue" type="Label" parent="HUD/ScoreContainer"]
margin_top = 54.0
margin_right = 180.0
margin_bottom = 140.0
size_flags_vertical = 3
size_flags_stretch_ratio = 1.3
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinalPanelContainer" type="PanelContainer" parent="HUD"]
visible = false
light_mask = 2
margin_left = 80.0
margin_top = 250.0
margin_right = 650.0
margin_bottom = 870.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BoxContainer" type="HBoxContainer" parent="HUD/FinalPanelContainer"]
margin_right = 570.0
margin_bottom = 620.0

[node name="MarginLeft" type="MarginContainer" parent="HUD/FinalPanelContainer/BoxContainer"]
margin_right = 170.0
margin_bottom = 620.0
size_flags_horizontal = 3

[node name="ScoreContainer" type="VBoxContainer" parent="HUD/FinalPanelContainer/BoxContainer"]
margin_left = 174.0
margin_right = 395.0
margin_bottom = 620.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.3

[node name="MarginTop" type="MarginContainer" parent="HUD/FinalPanelContainer/BoxContainer/ScoreContainer"]
margin_right = 221.0
margin_bottom = 109.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.7

[node name="Container" type="VBoxContainer" parent="HUD/FinalPanelContainer/BoxContainer/ScoreContainer"]
margin_top = 113.0
margin_right = 221.0
margin_bottom = 584.0
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Score" type="Label" parent="HUD/FinalPanelContainer/BoxContainer/ScoreContainer/Container"]
margin_right = 221.0
margin_bottom = 188.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "0"
align = 1
valign = 1

[node name="HighScore" type="Label" parent="HUD/FinalPanelContainer/BoxContainer/ScoreContainer/Container"]
margin_top = 192.0
margin_right = 221.0
margin_bottom = 381.0
size_flags_vertical = 3
custom_fonts/font = SubResource( 6 )
align = 1
valign = 1

[node name="ExitButton" type="TextureButton" parent="HUD/FinalPanelContainer/BoxContainer/ScoreContainer/Container"]
margin_top = 385.0
margin_right = 221.0
margin_bottom = 471.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.45
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 6

[node name="MarginBottom" type="MarginContainer" parent="HUD/FinalPanelContainer/BoxContainer/ScoreContainer"]
margin_top = 588.0
margin_right = 221.0
margin_bottom = 620.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.2

[node name="MarginRight" type="MarginContainer" parent="HUD/FinalPanelContainer/BoxContainer"]
margin_left = 399.0
margin_right = 570.0
margin_bottom = 620.0
size_flags_horizontal = 3

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="CollectablesTimer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="pressed" from="HUD/FinalPanelContainer/BoxContainer/ScoreContainer/Container/ExitButton" to="." method="on_ExitButton_pressed"]
[connection signal="timeout" from="ObstacleTimer" to="." method="on_ObstacleTimer_timeout"]
[connection signal="timeout" from="CollectablesTimer" to="." method="on_CollectablesTimer_timeout"]
